[project]
name = "enact"
version = "0.4.0.dev0"
dependencies = [
  "gradio",
  "numpy",
  "Pillow",
]
description = "A framework for generative software."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
